# work-buddy

./: .gitattributes  .gitignore  .mcp.json  404.html  CHANGELOG.md  CLAUDE.local.example.md  CLAUDE.local.md.example  CLAUDE.md  CNAME  CONTRIBUTING.md  DECISIONS.md  LICENSE  PHASE-3-DISCLOSURE-COHESION.md  PROGRESS.md  README.md  bash.exe.stackdump  config.example.yaml  config.local.example.yaml  config.local.yaml.example  index.html  mkdocs.yml  objects.inv  poetry.toml  pyproject.toml
.claude/: launch.json
.claude/commands/: wb-backup-now.md  wb-backup-restore.md  wb-chrome-triage.md  wb-commit.md  wb-context-collect.md  wb-context-review.md  wb-contract-check.md  wb-contract-new.md  wb-conversation.md  wb-datacore-query.md  wb-dev-commit.md  wb-dev-document.md  wb-dev-live-testing.md  wb-dev-mcp-reload.md  wb-dev-plugin-integration.md  wb-dev-pr.md  wb-dev-release.md  wb-dev-retro.md  wb-dev.md  wb-email-triage.md  wb-entity-edit.md  wb-entity-list.md  wb-entity-new.md  wb-entity-resolve.md  wb-event-new.md  wb-inline-todos.md  wb-journal-backlog.md  wb-journal-update.md  wb-meta-blindspots.md  wb-morning.md  wb-notify.md  wb-project-delete.md  wb-project-discover.md  wb-project-list.md  wb-project-new.md  wb-project-observe.md  wb-request.md  wb-session-find-uncommitted.md  wb-session-identify.md  wb-setup-help.md  (+19 more)
.claude/hooks/: session-init.sh
.github/: FUNDING.yml
.github/workflows/: cross-platform-packaging.yml  dco.yml  docs.yml  release.yml  tests.yml
architecture/: index.html
chrome_extension/: BUILD_LOG.md  SETUP.md  background.js  generate_icons.py  manifest.json
dashboard-react/: ARCHITECTURE.md  COMPONENTS.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
dashboard-react/public/: manifest.webmanifest
dashboard-react/src/: App.tsx  main.tsx  shell.css  theme.css
docs/: CNAME  index.md
eval/: README.md  __init__.py  conversation_summarize_diff.py  replay_incremental.py  v1_baseline_snapshot.py
handbook/: index.html
handbook/architecture/: index.html
handbook/architecture_artifact-system/: index.html
handbook/architecture_backups/: index.html
handbook/architecture_backups_wb-backup-now-directions/: index.html
handbook/architecture_backups_wb-backup-restore-directions/: index.html
handbook/architecture_capability-registry/: index.html
handbook/architecture_consolidated-index/: index.html
handbook/architecture_context-pipeline/: index.html
handbook/architecture_contracts/: index.html
handbook/architecture_control-graph/: index.html
handbook/architecture_conversation-observability/: index.html
handbook/architecture_data-first-capabilities/: index.html
handbook/architecture_embedding-service/: index.html
handbook/architecture_event-bus/: index.html
handbook/architecture_feature-cards/: index.html
handbook/architecture_health/: index.html
handbook/architecture_health_components/: index.html
handbook/architecture_health_fixers/: index.html
handbook/architecture_health_requirements/: index.html
handbook/architecture_hot-path-discipline/: index.html
handbook/architecture_inference/: index.html
handbook/architecture_inference_broker/: index.html
handbook/architecture_inference_fleet/: index.html
handbook/architecture_inference_provenance/: index.html
handbook/architecture_knowledge-system/: index.html
knowledge/: README.md
migration/: accumulation_audit_brief.md  accumulation_audit_findings.md  visibility_audit_brief.md  visibility_audit_findings.md
packaging/: build_payload.py  vendor_uv.py  version.py
prompts/: README.md
scripts/: audit_content_duplication.py  audit_lmstudio_gguf.py  audit_placeholder_recursion.py  audit_response_duplication.py  audit_workflow_consent.py  backfill_execution_mode.py  backfill_message_cleanup.py  extract_ops_module.py  flag_density_candidates.py  gen_app_icons.py  gen_tray_icons.py  migrate_capabilities_to_declarations.py  migrate_pool_slice_1.py  migrate_pool_slice_3.py  migrate_priced_with_v2.py  migrate_store_to_files.py  purge_orphaned_workflow_run_grants.py  rename_knowledge_units.py  rewrite_chrome_triage_directions.py  rewrite_chrome_triage_workflow.py  rewrite_process_backlog_workflow.py  start-hindsight.sh  strip_stage_metadata.py  verify_lmstudio_embedding.py
search/: search_index.json
sidecar_jobs/: artifact-cleanup.md  claude-code-usage-scan.md  consolidated-index-rebuild.md  consolidated-knowledge-rebuild.md  conversation-observability-refresh.md  conversation-observability-summarize.md  data-backup.md  docs-index-rebuild.md  email-triage-scan.md  event-source-poll.md  example-task-briefing.md  index-chrome-refresh.md  index-conversation-refresh.md  index-knowledge-refresh.md  index-summary-refresh.md  index-vault-refresh.md  inline-sync.md  ir-index-rebuild.md  journal-triage-scan.md  project-sync.md  service-heartbeat.md  summarization-worker.md  summary-index-rebuild.md  task-note-index.md  task-sync.md  triage-pool-sweep.md  vault-index-rebuild.md  vault-recon.md
stylesheets/: extra.css
tests/: conftest.py  test_consent_auto_request.py  test_consent_bundle_unbundle.py  test_consent_manual_raise.py  test_modal_consent_propagation.py  test_scheduler_jitter.py  test_schema_validation.py  test_sidecar_core.py  test_sidecar_cron.py  test_state_lock.py  test_visibility.py  test_workflow_consent.py
work_buddy/: __init__.py  activity.py  agent_ingest.py  agent_session.py  artifacts.py  collect.py  compat.py  config.py  consent.py  consent_principal.py  consent_status.py  contracts.py  desktop_launcher.py  errors.py  frontmatter.py  journal.py  journal_day.py  logging_config.py  morning.py  operations_read.py  paths.py  prompts.py  provision.py  recovery.py  remote_session.py  secret_env.py  session_launcher.py  stress_test.py  task_completeness.py  task_me.py  timefmt.py  tools.py  userpath.py  workflow.py
(+2912 files in other folders)
