[project]
name = "work-buddy"
version = "0.2.0"
description = "Personal agent framework built on Claude Code and MCP"
authors = [{ name = "Kaden McKeen" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pyyaml>=6.0,<7",
    "networkx>=3.0,<4.0",
    "omegaconf>=2.3.0,<3",
    "flask>=3.1.3,<4",
    "mcp[cli]>=1.27.0,<2",
    "anthropic>=0.89.0,<0.90",
    "jinja2>=3.1.6,<4",
    "cron-descriptor>=2.0.8,<3",
    "simhash>=2.1.2,<3",
    "rank-bm25>=0.2.2,<0.3",
    "torch>=2.11.0,<3",
    "sentence-transformers>=5.3.0,<6",
    "einops>=0.8.2,<0.9",
    "pywinpty>=3.0.3,<4 ; sys_platform == 'win32'",
    "ptyprocess>=0.7.0,<0.8 ; sys_platform != 'win32'",
    "httpx>=0.28.1,<0.29",
    "watchdog>=6.0.0,<7",
    "google-auth-oauthlib>=1.4.0,<2",
    "pathspec>=1.1.1,<2",
    "ddgs>=9.14.4,<10",
    "trafilatura>=1.8,<2",
    "cel-python>=0.5.0,<0.6",
    "jsonpath-ng>=1.8.0,<2",
]

[project.optional-dependencies]
memory = [
    "hindsight-api-slim>=0.4.22,<0.5",
    "hindsight-client>=0.4.22,<0.5",
]
telegram = ["python-telegram-bot>=22.7,<23"]
all = [
    "hindsight-api-slim>=0.4.22,<0.5",
    "hindsight-client>=0.4.22,<0.5",
    "python-telegram-bot>=22.7,<23",
    "pyside6-essentials>=6.8,<7",
]
tray = [
    "pyside6-essentials>=6.8,<7",
]

[project.scripts]
wbuddy = "work_buddy.cli:main"
collect = "work_buddy.collect:main"
work-buddy-mcp = "work_buddy.mcp_server:main"

[tool.hatch.build.targets.sdist]
include = ["work_buddy"]

[tool.hatch.build.targets.sdist.force-include]
"knowledge/store" = "knowledge/store"
"prompts" = "prompts"
"sidecar_jobs" = "sidecar_jobs"
".claude/commands" = ".claude/commands"
"config.example.yaml" = "config.example.yaml"
"config.local.yaml.example" = "config.local.yaml.example"
"docs/logo.svg" = "docs/logo.svg"

[tool.hatch.build.targets.wheel]
include = ["work_buddy"]

[tool.hatch.build.targets.wheel.force-include]
"knowledge/store" = "knowledge/store"
"prompts" = "prompts"
"sidecar_jobs" = "sidecar_jobs"
".claude/commands" = ".claude/commands"
"config.example.yaml" = "config.example.yaml"
"config.local.yaml.example" = "config.local.yaml.example"
"docs/logo.svg" = "docs/logo.svg"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "Pillow (>=10.0.0)",
]
docs = [
    "mkdocs (>=1.6.0,<2.0.0)",
    "mkdocs-material (>=9.6.0,<10.0.0)",
    "mkdocstrings[python] (>=0.29.0,<1.0.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Pure logic tests — no filesystem, no network",
    "component: Tests with temp dirs, temp DBs, or service boundaries",
    "integration: CLI smoke tests and HTTP endpoint tests",
    "real_task_store: opt out of the autouse task-store temp-DB isolation (see _isolate_task_store_and_vault)",
    "real_obsidian_bridge: opt out of the autouse Obsidian-bridge neutralization (see _isolate_task_store_and_vault)",
    "real_notification_delivery: opt out of the autouse notification-delivery stub (see _isolate_notification_delivery)",
    "real_sidecar_runtime_files: opt out of the autouse sidecar pid/state file redirection (see _isolate_sidecar_runtime_files)",
    "real_conversation_databases: opt out of conversation-observability and summarization temp-DB isolation",
]
addopts = "-q --tb=short"
